# pylitaire

./: .gitignore  README.md  TODO  cards.py  cursors.py  g.py  gamerules.py  graphics.py  index.html  install.sh  params.json  pylitaire  pylitaire.desktop  pylitaire.py  pylitaire.sh  pyproject.toml  setup.cfg  theme.py  themes.py  ui.py
data/cursors/: default.json
data/images/: README
data/themes/: README
pylitaire/: __main__.py  cards.py  cursors.py  enum.py  enum23.py  g.py  gamerules.py  graphics.py  main.py  themes.py  ui.py
pylitaire/data/config/: config.template.ini
pylitaire/data/cursors/: default.json  drag.json  draggable.json
pylitaire/data/icons/: README
pylitaire/data/themes/: .gitignore  Makefile  README
tools/: rsvg-demo.py  svg-tests-results.txt  svg-tests.py
