[project]
name = "pylitaire"
version = "0.1"
description = "Solitaire in Python"
authors = [
    {name = "Rodrigo Silva (MestreLion)", email = "linux@rodrigosilva.com"}
]
keywords = ["game", "cards", "solitaire"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: pygame",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    # Remove License classifier when PEP 639 lands
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
readme = "README.md"
# Pre-PEP 639: 'license' table with either 'file' or 'text' key
#license.file = "LICENSE"  # No new info, and setuptools includes by default
license.text = "GPL-3.0-or-later"  # Free text, so using SPDX
# PEP 639 (still draft as of oct-2022): 'license' string (SPDX), 'license-files'
#license = "GPL-3.0-or-later"
#license-files.paths = ["LICENSE"]  # already covered by the default .globs

# Due to setuptools >= 59.3
requires-python = ">=3.7"

# PyGObject and Pycairo via pip require system packages not installable by pip:
# On Debian/Ubuntu: libgirepository1.0-dev gcc libcairo2-dev python3-dev pkg-config
# Or simply install PyGObject and Pycairo themselves via package manager and not pip:
# On Debian/Ubuntu: python3-gi python3-gi-cairo gir1.2-gtk-3.0
# https://pygobject.readthedocs.io/en/latest/getting_started.html
# https://pycairo.readthedocs.io/en/latest/getting_started.html
# Aditionally, Rsvg bindings to librsvg is not available on pypi at all
# On Debian/Ubuntu: gir1.2-rsvg-2.0
# Use install.sh to apt-install dependencies, plus desktop integration (menu entry and icons)
dependencies = [
    "Pillow",
    "pycairo",
    "pygame>=2.1.2",  # available in Ubuntu 22.04 repo and pip-installable in Python 3.6
    "PyGObject",
    "pyxdg",
]

[project.gui-scripts]
pylitaire = "pylitaire.main:run"

[project.urls]
Homepage = "https://github.com/MestreLion/pylitaire"
Source = "https://github.com/MestreLion/pylitaire"
Tracker = "https://github.com/MestreLion/issues"

# needed for flat layout projects containing non-package dirs
[tool.setuptools.packages.find]
exclude = ["refs*"]

[tool.setuptools.package-data]
"*" = ["data/*/*"]  # or "data/**/*" when bumped to v62.3.0 (May 2022)

# Syntax and semantics for current recommended practices taken from:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# Adhering to PEP 621 landed in Setuptools 61.

[build-system]
requires = ["setuptools>=61.0"]  # March 2022, but not in Ubuntu 22.04 LTS
build-backend = "setuptools.build_meta"
