[metadata]
name = pylitaire
description = Solitaire in Python
version = 0.1
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/MestreLion/pylitaire
author = Rodrigo Silva (MestreLion)
author_email = linux@rodrigosilva.com,
license = GPLv3+
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: End Users/Desktop
    Topic :: Software Development :: Libraries :: pygame
    Topic :: Games/Entertainment
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/MestreLion/pylitaire
    Tracker = https://github.com/MestreLion/issues

[bdist_wheel]
universal = 1

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
;python_requires = >=3.7

;Debian/Ubuntu packages that might be needed:
;PyGObject (gi and cairo): python3-gi gir1.2-gtk-3.0  # python3-gi-cairo
;Pillow (PIL): python3-pil
install_requires =
    Pillow
    pycairo
    pygame
    PyGObject
    pyxdg

[options.entry_points]
gui_scripts =
    pylitaire = pylitaire.main:run
